--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 <body>
     <div>
         <h1>A Era Artifical</h1>
-        <img src="img/capa-livro.jpg">
+        <img src="capa-livro.jpg">
         <h2>Um futuro sombrio a nosso caminho</h2>
         <p>A história em que a inteligência artificial permitiu aos robôs se tornarem a espécie dominante do nosso planeta. Uma luta incessante pela sobrevivência humana tem início em um cenário catastrófico dominado pela guerra e pelo caos.</p>
         <a href="https://www.amazon.com.br/Era-Artificial-tempo-sombrio-m%C3%A1quinas-ebook/dp/B07VFF5368/ref=sr_1_1?crid=3VVGSAMA0DGBJ&dib=eyJ2IjoiMSJ9.rgvpX8ztgBhX4PYYiIzYw32bbHKaF5OAmjpW9ekq1qApuJYPMhiGbEOHslYdaDamY3XSZJxU0lIf6XXhu1tTZ_ze_R3a0W3BCymaQD0Ekv4yTgUacdSWGGC6nsGeltsxXHgpoKIgw1W1MJ1L_7QQusu07P3WKFffg--FpgNG9HidkOsi2vErIGa7PmugRorZjxN3nPEeUHXqjDHsjDns_U_zHypivo97PcEdQ_TnQ5m4mf5uVZGYYHFFRRRtCKMK_4wHU2Uwk5k8G5Eu-9_odJtvxai-u5_-qp19XLqjn7I.YLjQVFa_iARrvYKvN7tUfpzR2sgVzjc-h-3Sg8aVL4c&dib_tag=se&keywords=a+era+artificial&qid=1714669485&sprefix=a+era+artificia%2Caps%2C426&sr=8-1">COMPRAR</a>
