--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Livro: A Era Artificial</title>
     <link rel="stylesheet" href="livro.css">
 </head>
 <body>
@@ -26,7 +26,7 @@
         <h3> 
             Informações sobre o autor
         </h3>
-        <img src="img/autor.jpg">
+        <img src="autor.jpg">
         <p> 
             Diego Souza é apaixonado por tecnologia e trabalha com Desenvolvimento Web. Também é um eterno fã de ficção científica e escritor nas horas vagas. Carioca da gema, ama o Rio de Janeiro, cidade onde nasceu.
         </p>
